# SICARIOiDS

./: .gitignore  CMakeLists.txt  README.md  gl.c  main.cpp
Libraries/include/glad/: gl.h
Shaders/: default.frag  default.vert  ship.vert
renderer/: glad.c  main.cpp  renderer.sln
renderer/Libraries/include/glad/: gl.h  glad.h
src/: EBO.cpp  VAO.cpp  VBO.cpp  asteroid.cpp  gameEngine.cpp  main.cpp  shaderClass.cpp  ship.cpp
src/Headers/: EBO.h  VAO.h  VBO.h  asteroid.h  gameEngine.h  rendererItems.h  shaderClass.h  ship.h
